# aceforge-vst

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release-plugins.yml
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
_codeql_build_dir/ml-bridge/plugin/: Makefile  cmake_install.cmake
ml-bridge/: AceForge.md  BUILD_AND_CI.md  DEBUGGING.md  DESIGN.md  README.md  protocol.md
ml-bridge/AceForgeClient/: AceForgeClient.hpp  AceForgeClientMac.mm  README.md
ml-bridge/MinimalAU/: MLBridgeAU.c  README.md
ml-bridge/plugin/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
scripts/: build-installer-pkg.sh
